(4.2.5p190) 2009/07/20 Released by Harlan Stenn <stenn@ntp.org>
* Updated to AutoGen-5.9.8.
* [Bug 1248] RES_MSSNTP typo in ntp_proto.c.
* [Bug 1246] use a common template for singly-linked lists, convert most
  doubly-linked lists to singly-linked.
* Log warning about signd blocking when restrict mssntp used.
(4.2.5p189) 2009/07/16 Released by Harlan Stenn <stenn@ntp.org>
* Documentation cleanup from Dave Mills.
(4.2.5p188) 2009/07/15 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1245] Broken xmt time sent in fast_xmit() of 4.2.5p187.
(4.2.5p187) 2009/07/11 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1042] multicast listeners IPv4+6 ignore new interfaces.
* [Bug 1237] Windows serial code treat CR and LF both as line
  terminators.
* [Bug 1238] use fudge time2 for serial timecode offset in NMEA driver.
* [Bug 1242] Remove --enable-wintime, symmetric workaround is now
  always enabled.
* [Bug 1244] NTP_INSIST(fd != maxactivefd) failure in intres child
* Added restrict keyword "mssntp" for Samba4 DC operation, by Dave Mills.
(4.2.5p186) 2009/07/08 Released by Harlan Stenn <stenn@ntp.org>
* ntp_proto.c cleanup from Dave Mills.
(4.2.5p185) 2009/07/01 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
* [Bug 1234] convert NMEA driver to use common PPSAPI code.
* timepps-Solaris.h pps_handle_t changed from pointer to scalar
* Spectracom refclock added to Windows port of ntpd
* [Bug 1236] Declaration order fixed.
* Bracket private ONCORE debug statements with #if 0 rather than #ifdef
  DEBUG
* Delete ONCORE debug statement that is now handled elsewhere.
(4.2.5p184) 2009/06/24 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1233] atom refclock fudge time1 sign flipped in 4.2.5p164.
(4.2.5p183) 2009/06/23 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1196] setsockopt(SO_EXCLUSIVEADDRUSE) can fail on Windows 2000
  and earlier with WSAINVAL, do not log a complaint in that case.